--- a/conectare.html
+++ b/conectare.html
@@ -1,69 +1,70 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Librarium</title>
-    <link rel="stylesheet" href="style.css">
-</head>
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-<body>
+  <body>
     <div class="content">
-        <header>
-            <img src="img/biblioteca.jpg" alt="img giblioteca" width="550px" height="100px">
-            <div>
-                <h1><a href="index.html">Librarium</a></h1><br>
-                <h3>Cea mai mare colectie de carti!</h3><br>
-            </div>
-        </header>
+      <header>
+        <img
+          src="img/biblioteca.jpg"
+          alt="img giblioteca"
+          width="550px"
+          height="100px"
+        />
+        <div>
+          <h1><a href="index.html">Librarium</a></h1>
+          <br />
+          <h3>Cea mai mare colectie de carti!</h3>
+          <br />
+        </div>
+      </header>
 
-        <nav>
-            <div class="dropdownShort">
-                <div>Meniu</div>
-                <ul class="dropdownMenuShort">
-                    <li><a href="index.html">Acasa</a></li>
-                    <li class="dropdown">
-                        <a href="#">Genuri</a>
-                        <ul class="dropdownMenu">
-                            <li><a href="#">Lorem, ipsum.</a></li>
-                            <li><a href="#">Lorem, ipsum.</a></li>
-                            <li><a href="#">Lorem, ipsum.</a></li>
-                            <li><a href="#">Lorem, ipsum.</a></li>
-                            <li><a href="#">Lorem, ipsum.</a></li>
-                            <li><a href="#">Lorem, ipsum.</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="#">Autori</a></li>
-                    <li><a href="#">Noutati</a></li>
-                    <li><a href="inregistrare.html">Inregistrare</a></li>
-                    <li><a href="conectare.html">Conectare</a></li>
-                </ul>
-            </div>
-        </nav>
+      <nav>
+        <div class="dropdownShort">
+          <div>Meniu</div>
+          <ul class="dropdownMenuShort">
+            <li><a href="index.html">Acasa</a></li>
+            <li class="dropdown">
+              <a href="#">Genuri</a>
+              <ul class="dropdownMenu">
+                <li><a href="#">Lorem, ipsum.</a></li>
+                <li><a href="#">Lorem, ipsum.</a></li>
+                <li><a href="#">Lorem, ipsum.</a></li>
+                <li><a href="#">Lorem, ipsum.</a></li>
+                <li><a href="#">Lorem, ipsum.</a></li>
+                <li><a href="#">Lorem, ipsum.</a></li>
+              </ul>
+            </li>
+            <li><a href="#">Autori</a></li>
+            <li><a href="#">Noutati</a></li>
+            <li><a href="inregistrare.html">Inregistrare</a></li>
+            <li><a href="conectare.html">Conectare</a></li>
+          </ul>
+        </div>
+      </nav>
 
-        <menu>
+      <menu>
+        <div class="forms">
+          <h2>Conectare</h2>
 
-            <div class="forms">
-                <h2>Conectare</h2>
-
-                <form>
-                    <label for="email">Email</label>
-                    <input type="email" id="email" name="email"><br><br>
-                    <label for="password">Password</label>
-                    <input type="password" id="password"><br><br>
-                    <input type="submit" value="Conectare"><br>
-                </form>
-
-            </div>
-
-        </menu>
+          <form>
+            <label for="email">Email</label>
+            <input type="email" id="email" name="email" /><br /><br />
+            <label for="password">Password</label>
+            <input type="password" id="password" /><br /><br />
+            <input type="submit" value="Conectare" /><br />
+          </form>
+        </div>
+      </menu>
     </div>
 
     <footer>
-        <p>©Librarium 2022</p>
-        <p>Nostrud nostrud irure proident cillum id consequat.</p>
+      <p>©Librarium 2022</p>
+      <p>Nostrud nostrud irure proident cillum id consequat.</p>
     </footer>
-
-</body>
-
+  </body>
 </html>
