--- a/conectare.html
+++ b/conectare.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Librarium</title>
     <link rel="stylesheet" href="style.css" />
+    <script src="script.js"></script>
   </head>
 
   <body>
@@ -25,12 +26,12 @@
 
       <nav>
         <div class="dropdownShort">
-          <div>Meniu</div>
-          <ul class="dropdownMenuShort">
+          <button class="dropbtns" onclick="fToggleS()">Meniu</button>
+          <ul class="dropdownMenuShort" id="dropdownMenuShort">
             <li><a href="index.html">Acasa</a></li>
             <li class="dropdown">
-              <a href="#">Genuri</a>
-              <ul class="dropdownMenu">
+              <button class="dropbtn" onclick="fToggle()">Genuri</button>
+              <ul class="dropdownMenu" id="dropdownMenu">
                 <li><a href="#">Lorem, ipsum.</a></li>
                 <li><a href="#">Lorem, ipsum.</a></li>
                 <li><a href="#">Lorem, ipsum.</a></li>
@@ -56,7 +57,7 @@
             <input type="email" id="email" name="email" /><br /><br />
             <label for="password">Password</label>
             <input type="password" id="password" /><br /><br />
-            <input type="submit" value="Conectare" /><br />
+            <input type="button" value="Conectare" /><br />
           </form>
         </div>
       </menu>
