--- a/inregistrare.html
+++ b/inregistrare.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Librarium</title>
     <link rel="stylesheet" href="style.css" />
+    <script src="script.js"></script>
   </head>
 
   <body>
@@ -25,12 +26,12 @@
 
       <nav>
         <div class="dropdownShort">
-          <div>Meniu</div>
-          <ul class="dropdownMenuShort">
+          <button class="dropbtns" onclick="fToggleS()">Meniu</button>
+          <ul class="dropdownMenuShort" id="dropdownMenuShort">
             <li><a href="index.html">Acasa</a></li>
             <li class="dropdown">
-              <a href="#">Genuri</a>
-              <ul class="dropdownMenu">
+              <button class="dropbtn" onclick="fToggle()">Genuri</button>
+              <ul class="dropdownMenu" id="dropdownMenu">
                 <li><a href="#">Lorem, ipsum.</a></li>
                 <li><a href="#">Lorem, ipsum.</a></li>
                 <li><a href="#">Lorem, ipsum.</a></li>
@@ -50,7 +51,6 @@
       <menu>
         <div class="forms">
           <h2>Inregistrare</h2>
-
           <form>
             <label for="nume">Nume</label>
             <input type="text" id="nume" /><br /><br />
@@ -58,9 +58,9 @@
             <input type="email" id="email" /><br /><br />
             <label for="password">Parola</label>
             <input type="password" id="password" /><br /><br />
-            <label for="password">Inca o data</label>
-            <input type="password" id="password" /><br /><br />
-            <input type="submit" value="Inregistrare" /><br />
+            <label for="password2">Inca o data</label>
+            <input type="password" id="password2" /><br /><br />
+            <input type="button" onclick="sub()" value="Inregistrare" /><br />
           </form>
         </div>
       </menu>
