--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="script.js"></script>
   </head>
 
-  <body>
+  <body class="clr" id="clr">
     <div class="content">
       <header>
         <img
@@ -28,6 +28,8 @@
         <div class="dropdownShort">
           <button class="dropbtns" onclick="fToggleS()">Meniu</button>
           <ul class="dropdownMenuShort" id="dropdownMenuShort">
+            <li><button onclick="clr1()">C0</button></li>
+            <li><button onclick="clr()">C1</button></li>
             <li><a href="index.html">Acasa</a></li>
             <li class="dropdown">
               <button class="dropbtn" onclick="fToggle()">Genuri</button>
