--- a/conectare.html
+++ b/conectare.html
@@ -7,7 +7,7 @@
     <script src="script.js"></script>
   </head>
 
-  <body>
+  <body class="clr" id="clr">
     <div class="content">
       <header>
         <img
@@ -28,6 +28,8 @@
         <div class="dropdownShort">
           <button class="dropbtns" onclick="fToggleS()">Meniu</button>
           <ul class="dropdownMenuShort" id="dropdownMenuShort">
+            <li><button onclick="clr1()">C0</button></li>
+            <li><button onclick="clr()">C1</button></li>
             <li><a href="index.html">Acasa</a></li>
             <li class="dropdown">
               <button class="dropbtn" onclick="fToggle()">Genuri</button>
@@ -52,12 +54,12 @@
         <div class="forms">
           <h2>Conectare</h2>
 
-          <form>
+          <form onsubmit="return false">
             <label for="email">Email</label>
             <input type="email" id="email" name="email" /><br /><br />
             <label for="password">Password</label>
             <input type="password" id="password" /><br /><br />
-            <input type="button" value="Conectare" /><br />
+            <input type="submit" value="Conectare" /><br />
           </form>
         </div>
       </menu>
