--- a/inregistrare.html
+++ b/inregistrare.html
@@ -7,7 +7,7 @@
     <script src="script.js"></script>
   </head>
 
-  <body>
+  <body class="clr" id="clr">
     <div class="content">
       <header>
         <img
@@ -28,6 +28,8 @@
         <div class="dropdownShort">
           <button class="dropbtns" onclick="fToggleS()">Meniu</button>
           <ul class="dropdownMenuShort" id="dropdownMenuShort">
+            <li><button onclick="clr1()">C0</button></li>
+            <li><button onclick="clr()">C1</button></li>
             <li><a href="index.html">Acasa</a></li>
             <li class="dropdown">
               <button class="dropbtn" onclick="fToggle()">Genuri</button>
@@ -51,16 +53,16 @@
       <menu>
         <div class="forms">
           <h2>Inregistrare</h2>
-          <form>
+          <form onsubmit="return false">
             <label for="nume">Nume</label>
-            <input type="text" id="nume" /><br /><br />
+            <input type="text" id="nume" required /><br /><br />
             <label for="email">Email</label>
-            <input type="email" id="email" /><br /><br />
+            <input type="email" id="email" required /><br /><br />
             <label for="password">Parola</label>
-            <input type="password" id="password" /><br /><br />
+            <input type="password" id="password" required /><br /><br />
             <label for="password2">Inca o data</label>
-            <input type="password" id="password2" /><br /><br />
-            <input type="button" onclick="sub()" value="Inregistrare" /><br />
+            <input type="password" id="password2" required /><br /><br />
+            <input type="submit" onclick="sub()" value="Inregistrare" /><br />
           </form>
         </div>
       </menu>
