--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
         <div class="dropdownShort">
           <button class="dropbtns" onclick="fToggleS()">Meniu</button>
           <ul class="dropdownMenuShort" id="dropdownMenuShort">
-            <li><button onclick="clr1()">C0</button></li>
-            <li><button onclick="clr()">C1</button></li>
+            <li><button onclick="clr()">&#x25D1;</button></li>
             <li><a href="index.html">Acasa</a></li>
             <li class="dropdown">
               <button class="dropbtn" onclick="fToggle()">Genuri</button>
